kubernetes/cart-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: purely
  labels:
    app: cart-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: daniyalniggerman/cart-service:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: purely
  labels:
    app: cart-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: cart-service
