kubernetes/category-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service
  namespace: purely
  labels:
    app: category-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-service
  template:
    metadata:
      labels:
        app: category-service
    spec:
      containers:
        - name: category-service
          image: daniyalniggerman/category-service:latest
          ports:
            - containerPort: 9060
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
  namespace: purely
  labels:
    app: category-service
spec:
  type: ClusterIP
  ports:
    - port: 9060
      targetPort: 9060
  selector:
    app: category-service
