kubernetes/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: purely
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: daniyalniggerman/notification-service:latest
          ports:
            - containerPort: 9020
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: purely
  labels:
    app: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 9020
      targetPort: 9020
  selector:
    app: notification-service
