kubernetes/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: purely
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: daniyalniggerman/order-service:latest
          ports:
            - containerPort: 9070
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: purely
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
    - port: 9070
      targetPort: 9070
  selector:
    app: order-service
