kubernetes/service-registery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  namespace: purely
  labels:
    app: service-registry
spec:
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
      - name: service-registry
        image: daniyalniggerman/service-registry:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 8761

---

apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: purely
spec:
  selector:
    app: service-registry
  ports:
  - port: 8761
    targetPort: 8761
