kubernetes/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: purely
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: daniyalniggerman/user-service:latest
          ports:
            - containerPort: 9050
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: purely
  labels:
    app: user-service
spec:
  type: ClusterIP
  ports:
    - port: 9050
      targetPort: 9050
  selector:
    app: user-service
